<resources>
    <string name="app_name" translatable="false">Variometer</string>
    <string name="app_description">Vertical speed indicator</string>
    <string name="app_copyright">© Ivan Gorinov, 2012</string>
    <string name="home_page">https://altimeter.info/android/variometer</string>
    <string name="app_credit">Efficient Java Math Library by Peter Abeles</string>
    <string name="app_credit_page">https://ejml.org</string>
    <string name="app_notice1">This version will not be updated by Play Store because the package name is going to change.</string>
    <string name="app_notice2">Check the project page for updates.</string>
    <string name="about">About</string>
    <string name="reset">Reset</string>
    <string name="indicator">Indicator</string>
    <string name="filter">Filter</string>
    <string name="indicator_settings">Indicator settings</string>
    <string name="text_latitude">Latitude of your location will be used for better local gravity estimation in IVSI mode.</string>
    <string name="filter_parameters">Filter parameters</string>
    <string name="filter_type">Filter type</string>
    <string name="enable_sound">Enable sound</string>
    <string name="kalman_filter">Kalman Filter</string>
    <string name="scale_limit">Scale limit</string>
    <string name="vsi_unit">VSI unit</string>
    <string name="sample_size">Sample size</string>
    <string name="label_smoother_lag">Smoother lag</string>
    <string name="descr_smoother_lag">Smoother lag in samples. Higher values reduce noise but increase lag.</string>
    <string name="process_noise">Process noise</string>
    <string name="process_sigma1">VSI σ, m/s²</string>
    <string name="process_sigma2">IVSI σ, m/s²</string>
    <string name="std_dev">Standard Deviation</string>
    <string name="measurement_noise">Measurement noise</string>
    <string name="descr_sigma">Standard deviation σ (RMS noise) of sensors, same units as the sensor reading.</string>
    <string name="label_sigma_h">Altitude, m</string>
    <string name="label_sigma_a">Acceleration, m/s²</string>
    <string name="bias_a">Accelerometer bias correction</string>
    <string name="scale_a">Accelerometer scale correction</string>
    <string name="x_axis">X axis</string>
    <string name="y_axis">Y axis</string>
    <string name="z_axis">Z axis</string>
    <string name="descr_bias_a">Accelerometer bias, m/s²</string>
    <string name="descr_scale_a">Accelerometer scale correction</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="defaults">Reset Defaults</string>
    <string name="save">Save</string>
    <string name="set">Set</string>
    <string name="ok">OK</string>
    <string name="climb">UP</string>
    <string name="descent">DOWN</string>
    <string name="ivsi">IVSI</string>
    <string name="label_keep_screen">Keep screen on</string>
    <string name="descr_keep_screen">Prevent display from sleeping</string>

    <string name="pref_title_scale_limit">Scale limit</string>
    <string name="pref_default_scale_limit">5</string>

    <string name="calibration">Calibration</string>
    <string name="calibration_step0">For best results, the acceleration sensor needs to be calibrated. Calibration parameters are stored in this app&amp;s settings and do not affect sensor readings in other apps.</string>
    <string name="calibration_step0a">Steady support is more important than correct orientation. If you have a stand that holds the device in a tilted position, use the stand instead of holding the device by hand.</string>
    <string name="calibration_display_up">On the table, display facing UP</string>
    <string name="calibration_display_down">On the table, display facing DOWN</string>
    <string name="calibration_upright">On a stand, or leaning on a stable object, approximately UPRIGHT</string>
    <string name="calibration_upside_down">On a stand, or leaning on a stable object, approximately UPSIDE DOWN</string>
    <string name="calibration_left_side_down">On a stand, or leaning on a stable object, LEFT side down</string>
    <string name="calibration_right_side_down">On a stand, or leaning on a stable object, RIGHT side down</string>
    <string name="calibration_next">In 5 seconds after clicking \'%1$s\', leave the device in the following orientation:</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="skip_calibration">Skip calibration</string>
    <string name="next_step">Next step</string>
    <string name="accelerometer_calibration">Accelerometer calibration</string>
    <string name="reading_sensor_data">READING</string>
    <string name="processing_sensor_data">PROCESSING</string>
    <string name="too_much_noise">Too much noise in sensor data"</string>
    <string name="description_latitude">Latitude improves local gravity estimation</string>
    <string name="noise_sigma_a">Accelerometer, m/s²</string>
    <string name="descr_noise_density">Noise density</string>
    <string name="label_sigma_p">Pressure, hPa</string>
    <string name="sound_settings">Sound settings</string>
    <string name="sound_start_above">Start above, m/s</string>
    <string name="sound_stop_below">Stop below, m/s</string>
    <string name="sound_stop_above">Stop above, m/s</string>
    <string name="sound_start_below">Start below, m/s</string>
    <string name="sound_decay">Sound decay</string>
    <string name="descr_sound_decay">Make a string sound instead of beep</string>
    <string name="sound_octave">Octave Δv, m/s</string>
    <string name="descr_sound_octave">Speed difference indicated by one octave</string>
    <string name="const_alt_freq">Base frequency, Hz</string>
    <string name="sound_partials">Number of partials</string>
    <string name="sound_inharmonicity">Inharmonicity</string>
    <string name="calibration_stand_45">On the stand, leaning back about 45°</string>
    <string name="calibration_leaning_left">On the stand, leaning to the left</string>
    <string name="calibration_leaning_right">On the stand, leaning to the right</string>
    <string name="calibration_stand_45_fwd">On the stand, leaning forward about 45</string>
    <string name="label_latitude">Latitude</string>
    <string name="enter">Enter</string>
    <string name="label_pressure">Altimeter setting</string>
    <string name="ft">ft</string>
    <string name="channel_name">Vertical Speed Indicator</string>
    <string name="channel_description">Keep VSI running as a foreground service</string>
    <string name="sound_odd_partials">Odd partials only</string>
    <string name="main_menu">Main menu</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string-array name="alt_units">
        <item>m</item>
        <item>ft</item>
    </string-array>

    <string-array name="p_units">
        <item>hPa</item>
        <item>mm\nHg</item>
        <item>in\nHg</item>
    </string-array>

    <string-array name="pref_unit_list_titles">
        <item>m/s</item>
        <item>knots</item>
        <item>×100 ft/min</item>
    </string-array>

    <string-array name="pref_sensor_sets">
        <item>VSI</item>
        <item>IVSI</item>
    </string-array>

</resources>
