<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/indicator_settings"
        android:title="@string/indicator_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:visible="true">
    </item>
    <item
        android:id="@+id/sound_settings"
        android:title="@string/sound_settings">
    </item>
    <item
        android:id="@+id/filter_parameters"
        android:title="@string/filter_parameters">
    </item>
    <item
        android:id="@+id/accelerometer_calibration"
        android:title="@string/accelerometer_calibration">
    </item>
    <item
        android:id="@+id/defaults"
        android:title="@string/defaults">
    </item>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@android:drawable/ic_menu_info_details">
    </item>
</menu>
