<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6pt"
        android:text="@string/app_description"
        android:textSize="6pt" >
    </TextView>

    <TextView
        android:id="@+id/label_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6pt"
        android:text="@string/app_copyright"
        android:textSize="6pt" >
    </TextView>

    <TextView
        android:id="@+id/label_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6pt"
        android:autoLink="all"
        android:text="@string/home_page"
        android:fontFamily="monospace"
        android:textSize="6pt" >
    </TextView>

    <TextView
        android:id="@+id/label_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6pt"
        android:text="@string/app_credit"
        android:textSize="6pt" >
    </TextView>

    <TextView
        android:id="@+id/label_credit_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6pt"
        android:autoLink="all"
        android:text="@string/app_credit_page"
        android:fontFamily="monospace"
        android:textSize="6pt" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="6pt"
        android:background="@drawable/red_frame">

        <TextView
            android:id="@+id/label_notice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6pt"
            android:text="@string/app_notice1"
            android:textSize="6pt" >
        </TextView>

        <TextView
            android:id="@+id/label_notice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6pt"
            android:text="@string/app_notice2"
            android:textSize="6pt" >
        </TextView>
    </LinearLayout>
</LinearLayout>